[package]
name = "keyflow-chordpro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ChordPro 6.07 parser and AST. The lyric+chord side of keyflow charts."

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
