[package]
name = "keyflow-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for parsing and rendering Keyflow charts"

[[bin]]
name = "kf"
path = "src/main.rs"

[dependencies]
keyflow = { workspace = true, features = ["text", "midi", "engraver"] }

clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true
