[package]
name = "keyflow-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol server for Keyflow chart notation"

[[bin]]
name = "keyflow-lsp"
path = "src/main.rs"

[dependencies]
keyflow-text = { path = "../keyflow-text", features = ["highlighting"] }
keyflow-proto = { path = "../keyflow-proto", features = ["highlighting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
