[package]
name = "keyflow-syntax"
version.workspace = true
edition = "2024"
description = "Keyflow concrete syntax, lexer, AST, and highlighting"

[features]
default = []
highlighting = []

[dependencies]
facet.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
