[package]
name = "keyflow"
version.workspace = true
edition.workspace = true
description = "Music theory and chord parsing - re-exports from keyflow-proto"

[features]
default = ["text"]
text = ["dep:keyflow-text"]
midi = ["dep:keyflow-midi"]
engraver = ["dep:engraver"]
highlighting = ["keyflow-proto/highlighting", "keyflow-text?/highlighting"]
midi-import = ["engraver", "engraver/midi-import"]

[dependencies]
# Core dependencies
tracing = "0.1"
color-eyre = "0.6"
colored = "3.0"
regex = "1.11.3"
derive_more = { version = "1.0", features = ["debug", "display", "from", "error"] }

# DAW and facet (WASM compatible)
daw-proto = { workspace = true }
facet = { workspace = true }
helgoboss-midi = "0.4.0"

# Keyflow protocol types
keyflow-proto = { path = "../keyflow-proto" }
keyflow-text = { path = "../keyflow-text", optional = true }
keyflow-midi = { path = "../keyflow-midi", optional = true }
engraver = { path = "../engraver", optional = true, default-features = false, features = ["engraver"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.0", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }

# Non-WASM dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dawfile-reaper = { workspace = true }
engraver = { path = "../engraver", features = ["engraver", "midi-import"] }

[lints]
workspace = true
